<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">InControl</string>
    <string name="tab_devices">Devices</string>
    <string name="tab_scenarios">Scenarios</string>
    <string name="tab_sensors">Sensors</string>
    <string name="ok">Ok</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="executing_wait">Executing. Please wait...</string>
    <string name="refreshing_wait">Refreshing. Please wait...</string>
    <string name="request_failed">Request Failed.</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit</string>
    <string name="add_device">Add device</string>
    <string name="add_scenario">Add scenario</string>
    <string name="add_sensor">Add sensor</string>
    <string name="domain_or_ip">Domain or IP</string>
    <string name="port_number">Port number</string>
    <string name="login_credentials">Login Credentials</string>
    <string name="connection_settings">Connection Settings</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="connection_timeout">Connection timeout</string>
    <string name="response_timeout">Response timeout</string>
	<string name="device_house_filter">Devices tab house filter</string>
	<string name="device_house_filter_summary">Choose house codes to display in devices tab</string>
	<string name="device_order">Device order</string>
    <string name="refresh">Refresh</string>
    <string name="delete">Delete</string>
    <string name="delete_device_confirm">Are you sure you want to delete this device?</string>
    <string name="module_exists_overwrite">Module exists. Do you want to overwrite this module?</string>
    <string name="edit">Edit</string>
    <string name="edit_device">Edit device</string>
    <string name="address">Address</string>
    <string name="house_code">House code</string>
    <string name="unit_code">Unit code</string>
    <string name="type">Type</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
	<string-array name="house_codes">
		<item>A</item>
		<item>B</item>
		<item>C</item>
		<item>D</item>
		<item>E</item>
		<item>F</item>
		<item>G</item>
		<item>H</item>
		<item>I</item>
		<item>J</item>
		<item>K</item>
		<item>L</item>
		<item>M</item>
		<item>N</item>
		<item>O</item>
		<item>P</item>
	</string-array>
	<string-array name="unit_codes">
		<item>1</item>
		<item>2</item>
		<item>3</item>
		<item>4</item>
		<item>5</item>
		<item>6</item>
		<item>7</item>
		<item>8</item>
		<item>9</item>
		<item>10</item>
		<item>11</item>
		<item>12</item>
		<item>13</item>
		<item>14</item>
		<item>15</item>
		<item>16</item>
	</string-array>
	<string-array name="module_types">
		<item>Unknown</item>
		<item>Appliance</item>
		<item>Dimmer</item>
		<item>Sensor</item>
	</string-array>
	<string name="layout_options">Layout Options</string>
	<string name="startup_tab">Startup Tab</string>
	<string-array name="tabs">
		<item>Devices</item>
		<item>Scenarios</item>
		<item>Sensors</item>
	</string-array>
	<string-array name="tab_values">
		<item>0</item>
		<item>1</item>
		<item>2</item>
	</string-array>
	<string-array name="device_order">
		<item>Name</item>
		<item>House, Name</item>
		<item>House, Unit</item>
		<item>House, Type, Name</item>
		<item>House, Type, Unit</item>
		<item>House, Type (d), Name</item>
		<item>House, Type (d), Unit</item>
		<item>Type, Name</item>
		<item>Type, House, Name</item>
		<item>Type, House, Unit</item>
		<item>Type (d), Name</item>
		<item>Type (d), House, Name</item>
		<item>Type (d), House, Unit</item>
	</string-array>
	<string-array name="device_order_values">
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>3</item>
		<item>4</item>
		<item>5</item>
		<item>6</item>
		<item>7</item>
		<item>8</item>
		<item>9</item>
		<item>10</item>
		<item>11</item>
		<item>12</item>
	</string-array>
</resources>
