<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
	<LinearLayout
		android:orientation="vertical"
		android:layout_weight="9"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
	 	<TextView android:id="@+id/heading_label"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/edit"
			style="@style/Editor.Heading" />
		<LinearLayout
		  android:orientation="vertical"
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content"
		  style="@style/Editor.Item">
		 	<TextView android:id="@+id/address_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/address"
				style="@style/Editor.EditText_Label" />
			<LinearLayout
			  android:orientation="horizontal"
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content">
				<Spinner android:id="@+id/houseCode"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:prompt="@string/house_code" />
				<Spinner android:id="@+id/unitCode"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:prompt="@string/unit_code" />
			</LinearLayout>
		</LinearLayout>
		<View
			android:layout_width="fill_parent"
			android:layout_height="1dip"
			android:background="@android:drawable/divider_horizontal_dark" />
		<LinearLayout
		  android:orientation="vertical"
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content"
		  style="@style/Editor.Item">
			<TextView android:id="@+id/moduleType_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/type"
				style="@style/Editor.EditText_Label" />	
			<Spinner android:id="@+id/moduleType"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:prompt="@string/type" />
		</LinearLayout>
		<View
			android:layout_width="fill_parent"
			android:layout_height="1dip"
			android:background="@android:drawable/divider_horizontal_bright" />
		<LinearLayout
		  android:orientation="vertical"
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content"
		  style="@style/Editor.Item">
			<TextView android:id="@+id/name_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/name"
				style="@style/Editor.EditText_Label" />	
			<EditText android:id="@+id/name"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:hint="@string/name"
				android:capitalize="sentences"
				android:maxLength="16" />
		</LinearLayout>
		<View
			android:layout_width="fill_parent"
			android:layout_height="1dip"
			android:background="@android:drawable/divider_horizontal_bright" />
	</LinearLayout>
	<LinearLayout
		android:background="@android:drawable/bottom_bar"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:paddingTop="5dip"
		android:paddingLeft="4dip"
		android:paddingRight="4dip"
		android:paddingBottom="1dip">
		<Button android:id="@+id/save_button"
			android:layout_width="0dip"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:text="@string/save" />
		<Button android:id="@+id/cancel_button"
			android:layout_width="0dip"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:text="@string/cancel" />
	</LinearLayout>
</LinearLayout>